# astral-assessment

./: .env.example  README.md  debug_api.py  main.py  pyproject.toml
api/: middleware.py  schemas.py
api/routers/: health.py  register.py
architecture/: firecrawl-resilience.md  inngest-integration.md  output-management.md
core/: config.py  error_messages.py  utils.py
core/clients/: firecrawl.py  http.py  inngest.py
features/website_analysis/: discover.py  filter.py  scrape.py
features/workflows/: register_workflow.py
outputs/: .gitkeep  analysis_20250831_180549_d4ec1424.json  analysis_20250831_180552_45d596f4.json  analysis_20250831_181129_7c646589.json  analysis_20250831_181330_ea8f11cf.json  analysis_20250902_164651_ExampleT_test-exa.json  analysis_20250902_165127_BobB_c582fd23.json  analysis_20250902_165205_CharlieC_bb9aeb01.json  analysis_20250902_174200_BobB_aa3f9c16.json  analysis_20250902_174401_CharlieC_efc307b6.json
scripts/: run.sh  seed_examples.sh
tests/: test_fallback_mechanisms.py  test_health.py  test_integration_workflow.py  test_output_shape.py  test_register_validation.py
tests/fixtures/: mock_firecrawl.json
